[gd_scene load_steps=3 format=2]

[ext_resource path="res://ModeSelect.gd" type="Script" id=1]
[ext_resource path="res://images/bg2.png" type="Texture" id=3]

[node name="ModeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.254902 )

[node name="Controls" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -76.5
margin_right = 106.0
margin_bottom = 76.5

[node name="ColorRect" type="ColorRect" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.137255, 0.137255, 0.784314 )

[node name="Title" type="Label" parent="Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 19.0
margin_right = 98.5
margin_bottom = 33.0
text = "Trailblazer Card Generator"
align = 1

[node name="Modes" type="VBoxContainer" parent="Controls"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = -18.5
margin_right = 59.0
margin_bottom = 18.5
custom_constants/separation = 12
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Controls/Modes"]
margin_top = 8.0
margin_right = 118.0
margin_bottom = 28.0
custom_constants/separation = 16
alignment = 1

[node name="New" type="Button" parent="Controls/Modes/Buttons"]
margin_left = 10.0
margin_right = 50.0
margin_bottom = 20.0
text = "New"

[node name="Load" type="Button" parent="Controls/Modes/Buttons"]
margin_left = 66.0
margin_right = 108.0
margin_bottom = 20.0
text = "Load"

[node name="Label" type="Label" parent="Controls"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -165.5
margin_top = 17.0
margin_right = 165.5
margin_bottom = 31.0
text = "Note: Loading a Standard Mode list doesn't work yet"

[node name="Import" type="Button" parent="Controls"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -31.0
margin_right = 62.0
margin_bottom = -11.0
text = "Import Collection"

[node name="LoadDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -331.5
margin_top = -255.5
margin_right = 331.5
margin_bottom = 255.5
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 1
filters = PoolStringArray( "*.tbz" )

[node name="NewNameDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -86.0
margin_right = 133.0
margin_bottom = 86.0
popup_exclusive = true
window_title = "New Card List"
resizable = true
dialog_hide_on_ok = false

[node name="VBox" type="VBoxContainer" parent="NewNameDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -78.0
margin_right = 125.0
margin_bottom = 50.0
custom_constants/separation = 8

[node name="NameLabel" type="Label" parent="NewNameDialog/VBox"]
margin_right = 250.0
margin_bottom = 14.0
text = "Enter card list name."
align = 1
valign = 1

[node name="Name" type="LineEdit" parent="NewNameDialog/VBox"]
margin_top = 22.0
margin_right = 250.0
margin_bottom = 46.0

[node name="Format" type="OptionButton" parent="NewNameDialog/VBox"]
margin_left = 62.0
margin_top = 54.0
margin_right = 187.0
margin_bottom = 74.0
rect_min_size = Vector2( 125, 0 )
size_flags_horizontal = 4
text = "Format"

[node name="Singleton" type="CheckBox" parent="NewNameDialog/VBox"]
margin_left = 81.0
margin_top = 82.0
margin_right = 168.0
margin_bottom = 106.0
size_flags_horizontal = 4
text = "Singleton"

[node name="Err" type="Label" parent="NewNameDialog/VBox"]
visible = false
margin_top = 114.0
margin_right = 250.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0.945098, 0.360784, 0.360784, 1 )
text = "Name cannot be left blank"
align = 1

[node name="ImportDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.5
margin_top = -257.5
margin_right = 182.5
margin_bottom = 257.5
popup_exclusive = true
window_title = "New Card List"
resizable = true
dialog_hide_on_ok = false

[node name="VBox" type="VBoxContainer" parent="ImportDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.5
margin_top = -249.5
margin_right = 174.5
margin_bottom = 221.5
custom_constants/separation = 8
alignment = 1

[node name="NameLabel" type="Label" parent="ImportDialog/VBox"]
margin_right = 349.0
margin_bottom = 14.0
text = "Enter card list name."
align = 1
valign = 1

[node name="Name" type="LineEdit" parent="ImportDialog/VBox"]
margin_top = 22.0
margin_right = 349.0
margin_bottom = 46.0

[node name="Format" type="OptionButton" parent="ImportDialog/VBox"]
margin_left = 112.0
margin_top = 54.0
margin_right = 237.0
margin_bottom = 74.0
rect_min_size = Vector2( 125, 0 )
size_flags_horizontal = 4
text = "Format"

[node name="Singleton" type="CheckBox" parent="ImportDialog/VBox"]
margin_left = 131.0
margin_top = 82.0
margin_right = 218.0
margin_bottom = 106.0
size_flags_horizontal = 4
text = "Singleton"
align = 1

[node name="Err" type="Label" parent="ImportDialog/VBox"]
visible = false
margin_top = 82.0
margin_right = 349.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.945098, 0.360784, 0.360784, 1 )
text = "Name cannot be left blank"
align = 1

[node name="List" type="TextEdit" parent="ImportDialog/VBox"]
margin_top = 114.0
margin_right = 349.0
margin_bottom = 471.0
size_flags_vertical = 3
show_line_numbers = true

[node name="Err2" type="Label" parent="ImportDialog/VBox"]
visible = false
margin_top = 457.0
margin_right = 349.0
margin_bottom = 471.0
custom_colors/font_color = Color( 0.945098, 0.360784, 0.360784, 1 )
text = "List cannot be left blank"
align = 1

[connection signal="pressed" from="Controls/Modes/Buttons/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Controls/Modes/Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Controls/Import" to="." method="_on_Import_pressed"]
[connection signal="about_to_show" from="LoadDialog" to="." method="_on_LoadDialog_about_to_show"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_LoadDialog_file_selected"]
[connection signal="about_to_show" from="NewNameDialog" to="." method="_on_NewNameDialog_about_to_show"]
[connection signal="confirmed" from="NewNameDialog" to="." method="_on_NewNameDialog_confirmed"]
[connection signal="about_to_show" from="ImportDialog" to="." method="_on_ImportDialog_about_to_show"]
[connection signal="confirmed" from="ImportDialog" to="." method="_on_ImportDialog_confirmed"]
